--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 ------------------------------------------------------------------------
+git | lori  | 2013-03-16
+
+put on github and fixed for php 5.4 series
+
+------------------------------------------------------------------------
 r57 | homme | 2009-10-27 15:05:50 +0000 (Tue, 27 Oct 2009) | 2 lines
 
 Updated filenames
